# LSoftRender

./: CMakeLists.txt  README.md  vcpkg.json
include/: Application.h  FPSCounter.h  FrameBuffer.h  Window.h  config.h
src/: Application.cpp  FPSCounter.cpp  FrameBuffer.cpp  Window.cpp  main.cpp
